# PROJE

./: .env.example  .gitignore  BASLAT.bat  README.md  ai_integrations.py  app.py  backtest_engine.py  demo.py  financial_mcp.py  intraday_strategy_engine.py  quant_ai_engine.py  quick_test.py  reliability_test.py  requirements.txt  stock_analyzer.py  test_new_features.py
.streamlit/: config.toml
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/docs/plans/: 2026-02-28-phase2-analytics-design.md  2026-02-28-pm-sim-design.md  2026-02-28-pm-sim-implementation.md
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/examples/: README.md  limit_grid.py  mean_reversion.py  momentum.py
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/pm_trader/: __init__.py  __main__.py  analytics.py  api.py  backtest.py  benchmark.py  card.py  cli.py  db.py  engine.py  export.py  mcp_server.py  models.py  orderbook.py  orders.py
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/skill/pm-sim/: SKILL.md
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/skill/polymarket-paper-trader/: SKILL.md
trade/polymarket-paper-trader-main/polymarket-paper-trader-main/tests/: conftest.py  test___main__.py  test_analytics.py  test_api.py  test_backtest.py  test_behavior.py  test_benchmark.py  test_card.py  test_cli.py  test_db.py  test_e2e_live.py  test_engine.py  test_export.py  test_mcp_server.py  test_models.py  test_orderbook.py  test_orders.py
tradingview-mcp-main/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  INSTALLATION.md  LICENSE  OPENCLAW.md  README.md  docker-compose.yml  pyproject.toml
tradingview-mcp-main/.github/: FUNDING.yml
tradingview-mcp-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_help.md
tradingview-mcp-main/openclaw/: SKILL.md  trading.py
tradingview-mcp-main/src/tradingview_mcp/: __init__.py  server.py
tradingview-mcp-main/src/tradingview_mcp/coinlist/: asx.txt  chn.txt  egx.txt  sse.txt  szse.txt
tradingview-mcp-main/src/tradingview_mcp/core/: types.py
tradingview-mcp-main/src/tradingview_mcp/core/data/: egx_indices.py  egx_sectors.py
tradingview-mcp-main/src/tradingview_mcp/core/services/: backtest_service.py  coinlist.py  egx_service.py  indicators.py  indicators_calc.py  multi_agent_service.py  news_service.py  proxy_manager.py  scanner_service.py  screener_provider.py  screener_service.py  sentiment_service.py  yahoo_finance_service.py
tradingview-mcp-main/src/tradingview_mcp/core/utils/: validators.py
(+362 files in other folders)
