[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-paper-trader"
version = "0.1.7"
description = "Your AI agent trades Polymarket — $10k paper money, real prices, zero risk. Compete on the leaderboard."
authors = [{name = "agent-next"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["polymarket", "paper-trading", "prediction-markets", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
include = ["pm_trader*"]

[tool.pytest.ini_options]
markers = ["live: tests requiring network access to Polymarket API"]

[project.urls]
Homepage = "https://pypi.org/project/polymarket-paper-trader/"
Repository = "https://github.com/agent-next/polymarket-paper-trader"
Issues = "https://github.com/agent-next/polymarket-paper-trader/issues"

[project.scripts]
pm-trader = "pm_trader.cli:main"
pm-trader-mcp = "pm_trader.mcp_server:main"
